--- a/charts/playground_vpc/templates/vpc.yaml
+++ b/charts/playground_vpc/templates/vpc.yaml
@@ -1,16 +1,16 @@
 apiVersion: ec2.aws.crossplane.io/v1beta1
 kind: VPC
 metadata:
-  name: playground-vpc
+  name: {{ .Values.vpcName }}
 spec:
   forProvider:
-    region: us-east-1
-    cidrBlock: 10.0.0.0/16
+    region: {{ .Values.region }}
+    cidrBlock: {{ .Values.vpcCidrBlock }}
     enableDnsSupport: true
     enableDnsHostNames: true
     tags:
     - key: Name
-      value: playground-vpc
+      value: {{ .Values.vpcName }}
     instanceTenancy: default
   providerConfigRef:
-    name: default
+    name: {{ .Values.providerConfigName }}
