--- a/charts/playground-vpc/Chart.yaml
+++ b/charts/playground-vpc/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: playground_vpc
+name: playground-vpc
 description: AWS VPC with 1 subnet, IGW and RT
 type: application
-version: 0.1.0
+version: 0.2.0
