--- a/charts/playground-vpc/templates/vpc.yaml
+++ b/charts/playground-vpc/templates/vpc.yaml
@@ -1,16 +1,16 @@
 apiVersion: ec2.aws.crossplane.io/v1beta1
 kind: VPC
 metadata:
-  name: {{ .Values.vpcName }}
+  name: {{ .Values.vpc.name }}
 spec:
   forProvider:
     region: {{ .Values.region }}
-    cidrBlock: {{ .Values.vpcCidrBlock }}
+    cidrBlock: {{ .Values.vpc.cidrBlock }}
     enableDnsSupport: true
     enableDnsHostNames: true
     tags:
     - key: Name
-      value: {{ .Values.vpcName }}
+      value: {{ .Values.vpc.name }}
     instanceTenancy: default
   providerConfigRef:
     name: {{ .Values.providerConfigName }}
